# agent-pilot

./: .gitignore  AGENT_PILOT_MVP_SPEC_MACOS_V1_2_DISCOVERY.md  CONTRIBUTING.md  LICENSE  NOTICE  PROJECT_HANDOFF.md  README.en.md  README.md  package.json
examples/: config.example.json
scripts/: agent-pilot  claude-hook-example.sh  codex-notify-example.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/helpers/: vscode_remote_exec.cjs
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web/: app.js  index.html  styles.css
